--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>I Love You</title>
   <meta name="description" content="Semangat beraktifitas ya sayang">
-  <meta name="author" content="Wafa Rifqi Anafin">
+  <meta name="author" content="Rizky Ananda">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/efekteks.css">
   <link rel="stylesheet" href="css/responsif.css">
